Grid resizing test credit added

--- a/grid-resizing.html
+++ b/grid-resizing.html
@@ -20,6 +20,8 @@
 <p>
 In the following tests, Chrome resizes the gridified element’s height to match its contents.  Firefox will make the gridified element as tall as it would need to be if the images were not scaled down using the <code>width</code> property, <em>unless</em> the images are scaled down with an explicit width (the third test).  If you check the box before a gridified element, the images will resume their <code>auto</code> size.  Note that in the second test, Firefox will expand the gridified element’s height to contain the images, then return the height to its original distance once you uncheck the box.
 </p>
+<p>(Testcase dervied from <a href="http://codepen.io/rachelandrew/pen/XXmzRL">this example</a> from <a href="https://rachelandrew.co.uk/">Rachel Andrew</a>’s <a href="https://24ways.org/2015/grid-flexbox-box-alignment-our-new-system-for-layout/">24ways article</a>.)
+
 
 <label for="as1">Auto-size images</label> <input type="checkbox" id="as1"> 
 
