--- a/grid-vs-subgrid.html
+++ b/grid-vs-subgrid.html
@@ -4,8 +4,18 @@
 <meta charset="utf-8" />
 <title>Grids vs. Subgrids</title>
 <link rel="stylesheet" type="text/css" href="c/style-insert-tests.css">
+<style type="text/css">
+form {position: relative;}
+form[id]::before {content: "#" attr(id);
+	position: absolute; bottom: 100%; right: 100%;
+	transform-origin: 100% 100%; transform: rotate(-90deg);
+	background: rgba(216,192,0,0.3);
+	padding: 0.25em 0.75em 0;
+	font: bold 1em "Consolas", "Courier New", monospace;
+	}
+</style>
 <style type="text/css" id="tests">
-form {width: 30em; margin: 2em 0; padding: 1em; background: rgba(216,192,0,0.2);}
+form {width: 30em; margin: 2em; padding: 1em; background: rgba(216,192,0,0.2);}
 form ul {margin: 0; padding: 0;}
 form ul li {border: 1px dotted red; margin: 2px 0; padding: 2px;}
 
@@ -22,6 +32,16 @@ form#form3 ul li {display: grid; grid: subgrid; grid-column: 1 / 3;}
 </head>
 <body>
 
+
+<form>
+  <ul>
+    <li><label for=name1>Name:</label> <input id=name1 name=name1>
+    <li><label for=email1>Email:</label> <input id=email1 name=email1 type=email>
+    <li><label for=tel1>Telephone:</label> <input id=tel1 name=tel1 type=tel>
+    <li><label for=url1>Homepage:</label> <input id=url1 name=url1 type=url>
+    <li><label for=bday1>Birthday:</label> <input id=bday1 name=bday1 type=date>
+  </ul>
+</form>
 
 <form id="form1">
   <ul>
