Grid vs. subgrid update

--- a/grid-vs-subgrid.html
+++ b/grid-vs-subgrid.html
@@ -35,11 +35,11 @@ form#form3 ul li {display: grid; grid: subgrid; grid-column: 1 / 3;}
 
 <form>
   <ul>
-    <li><label for=name1>Name:</label> <input id=name1 name=name1>
-    <li><label for=email1>Email:</label> <input id=email1 name=email1 type=email>
-    <li><label for=tel1>Telephone:</label> <input id=tel1 name=tel1 type=tel>
-    <li><label for=url1>Homepage:</label> <input id=url1 name=url1 type=url>
-    <li><label for=bday1>Birthday:</label> <input id=bday1 name=bday1 type=date>
+    <li><label for=name>Name:</label> <input id=name name=name>
+    <li><label for=email>Email:</label> <input id=email name=email type=email>
+    <li><label for=tel>Telephone:</label> <input id=tel name=tel type=tel>
+    <li><label for=url>Homepage:</label> <input id=url name=url type=url>
+    <li><label for=bday>Birthday:</label> <input id=bday name=bday type=date>
   </ul>
 </form>
 
