Grid vs. subgrid update (added credit link)

--- a/grid-vs-subgrid.html
+++ b/grid-vs-subgrid.html
@@ -11,8 +11,7 @@ form[id]::before {content: "#" attr(id);
 	transform-origin: 100% 100%; transform: rotate(-90deg);
 	background: rgba(216,192,0,0.3);
 	padding: 0.25em 0.75em 0;
-	font: bold 1em "Consolas", "Courier New", monospace;
-	}
+	font: bold 1em "Consolas", "Courier New", monospace;}
 </style>
 <style type="text/css" id="tests">
 form {width: 30em; margin: 2em; padding: 1em; background: rgba(216,192,0,0.2);}
@@ -32,6 +31,7 @@ form#form3 ul li {display: grid; grid: subgrid; grid-column: 1 / 3;}
 </head>
 <body>
 
+<p>Markup based on <a href="http://fantasai.inkedblade.net/style/discuss/subgrid-markup/">original work by Fantasai</a>.</p>
 
 <form>
   <ul>
