Grid vs. subgrid update (fiddling with GC styles)

--- a/grid-vs-subgrid.html
+++ b/grid-vs-subgrid.html
@@ -9,7 +9,7 @@ form {position: relative;}
 form[id]::before {content: "#" attr(id);
 	position: absolute; bottom: 100%; right: 100%;
 	transform-origin: 100% 100%; transform: rotate(-90deg);
-	background: rgba(216,192,0,0.3);
+	background: linear-gradient(to bottom, black 1px, rgba(216,192,0,0.3) 1px, rgba(216,192,0,0.2));
 	padding: 0.25em 0.75em 0;
 	font: bold 1em "Consolas", "Courier New", monospace;}
 </style>
