Added removal warning to 'grid-template' (no longer in grid)

--- a/css3/grid-template.html
+++ b/css3/grid-template.html
@@ -19,7 +19,10 @@
 </style>
 </head>
 <body id="www-meyerweb-com" class="css test suite">
-<p id="specref"><a href="http://www.w3.org/TR/css-grid-1/#explicit-grid-shorthand">http://www.w3.org/TR/css-grid-1/#explicit-grid-shorthand</a></p>
+
+<p class="warning">
+This property was dropped from grid implementations in early 2016.  Thus, <strong>conforming browsers will fail this test</strong>, as they should.  The page is being kept for historical reasons, and also to avoid breaking any inbound links.
+</p>
 
 <div class="arena">
 
