--- a/css3/caption-side.html
+++ b/css3/caption-side.html
@@ -5,7 +5,8 @@
 <link rel="stylesheet" href="c/base.css" type="text/css">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <style type="text/css" id="tests">
-table {border: 1px solid red; margin: 1em;}
+table {border: 1px solid red; margin: 1em 1em 3em;}
+caption {margin: 1em 0; border: 1px solid; padding: 0.5em;}
 #c01 {caption-side: top;}
 #c02 {caption-side: bottom;}
 </style>
@@ -18,6 +19,14 @@ table {border: 1px solid red; margin: 1em;}
 
 <table>
 <caption id="c01">[#c01] Caption!</caption>
+<tr>
+<th>Header</th>
+<th>Header</th>
+<th>Header</th>
+<th>Header</th>
+<th>Header</th>
+<th>Header</th>
+</tr>
 <tr>
 <th>Header</th>
 <td>Data</td>
@@ -38,6 +47,14 @@ table {border: 1px solid red; margin: 1em;}
 
 <table>
 <caption id="c02">[#c02] Caption!</caption>
+<tr>
+<th>Header</th>
+<th>Header</th>
+<th>Header</th>
+<th>Header</th>
+<th>Header</th>
+<th>Header</th>
+</tr>
 <tr>
 <th>Header</th>
 <td>Data</td>
