--- a/text-shadow-piles.html
+++ b/text-shadow-piles.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="utf-8" />
-<title>Flexbox</title>
+<title>Cumulative Text Shadows</title>
 <style type="text/css">
 html {background-color: black;}
 body {padding: 2em 0; width: 55.5em;
