--- a/text-shadow-piles.html
+++ b/text-shadow-piles.html
@@ -9,10 +9,10 @@ body {padding: 2em 0; width: 55.5em;
 	background-image: radial-gradient(ellipse 70% 200% at 90% 50%, rgba(255,255,255,0.1) 10%, rgba(255,255,255,1) 100%);
 	background-image: linear-gradient(to left, rgba(255,0,255,0.1) 10%, rgba(255,255,255,1) 80%);
 }
-li {font: 1.5em sans-serif;}
+li {font: 1.5em/1.1 sans-serif;}
 li > * {color: white;}
-li h2 {margin-bottom: 0;}
-li p {margin-top: 0.5em;}
+li h2 {margin: 0.5em 0 0;}
+li p {margin: 0.5em 0 1em;}
 li:nth-of-type(1) {text-shadow: 0 0 3px black;}
 li:nth-of-type(2) {text-shadow: 0 0 3px black, 0 0 2px black;}
 li:nth-of-type(3) {text-shadow: 0 0 3px black, 0 0 1px black;}
