--- a/css3/val-length-units.html
+++ b/css3/val-length-units.html
@@ -5,7 +5,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <link rel="stylesheet" href="c/base.css" type="text/css">
 <style type="text/css" id="tests">
-html {font-size: 20px;}
+.arena {font-size: 20px;}
 div {background: #BBB; color: #000; width: 0;
 	padding: 0.25em 0 0.15em; margin-bottom: 0.5em;
 	text-indent: 1em; white-space: nowrap;}
@@ -15,6 +15,7 @@ div {background: #BBB; color: #000; width: 0;
 #inch {width: 4.167in;}
 #cm {width: 10.5833cm;}
 #mm {width: 105.833mm;}
+#q {width: 423.33q;}
 #pt {width: 300pt;}
 #pc {width: 25pc;}
 #ex {width: 40ex;}
@@ -38,6 +39,7 @@ div {background: #BBB; color: #000; width: 0;
 <div id="inch">4.167in - inches</div>
 <div id="cm">10.5833cm - centimeters</div>
 <div id="mm">105.833mm - millimeters</div>
+<div id="q">423.33q - quarter-millimeters</div>
 <div id="pt">300pt - points</div>
 <div id="pc">25pc - picas</div>
 <div id="ex">40ex - x-height</div>
