Added note to FF font-writing-mode-opacity-clip test

--- a/firefox/opacity-writing-font-clip.html
+++ b/firefox/opacity-writing-font-clip.html
@@ -66,5 +66,9 @@ h4 {writing-mode: horizontal-tb;}
 
 </form>
 
+<p>
+<strong>Note:</strong> try drag-selecting the text of the <code>h2</code> when in Rubik (the clipped case).
+</p>
+
 </body>
 </html>
