Massive update to list-style-type

--- a/css3/list-style-type.html
+++ b/css3/list-style-type.html
@@ -12,8 +12,9 @@ body {margin-top: 12.33em;}
 hr.clr {clear: both;}
 
 @media screen and (min-width: 60em) {
-	style#tests {width: 35em; height: 95%; max-height: 100%; left: 0;}
-	body {margin: 0 0 0 31em;}
+	style#tests {width: 34em; height: auto; max-height: 100%;
+		left: 0; bottom: 2.25em; top: 0;}
+	body {margin: 0 0 0 30em;}
 }
 </style>
 <style type="text/css" id="tests">
