--- a/css3/list-style-type.html
+++ b/css3/list-style-type.html
@@ -3,8 +3,10 @@
 <head>
 <title>CSS3 test: list-style-type</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+<meta name=viewport content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="c/base.css" type="text/css">
 <style type="text/css">
+html {-webkit-text-size-adjust: 100%;}
 style#tests {height: 14.33em; position: fixed; width: 97%;}
 body {margin-top: 12.33em;}
 .arena div {float: left; clear: left;}
