Added string markers to list-style-type

--- a/css3/list-style-type.html
+++ b/css3/list-style-type.html
@@ -20,12 +20,13 @@ hr.clr {clear: both;}
 }
 </style>
 <style type="text/css" id="tests">
-/* --- Symbolic list types --- */
+/* --- Symbolic and string list types --- */
 #d01 .l01 {list-style-type: disc;}
 #d01 .l02 {list-style-type: circle;}
 #d01 .l03 {list-style-type: square;}
 #d01 .l04 {list-style-type: disclosure-open;}
 #d01 .l05 {list-style-type: disclosure-closed;}
+#d01 .l06 {list-style-type: "⌘";}
 
 /* --- Numeric list types --- */
 #d02 .l01 {list-style-type: decimal;}
@@ -141,12 +142,13 @@ hr.clr {clear: both;}
 <div class="arena">
 
 <div id="d01">
-<h2>[#d01] Symbolic list types</h2>
+<h2>[#d01] Symbolic and string list types</h2>
 <ul class="l01"><li>two</li><li>three</li><li>four</li><li>five</li></ul>
 <ul class="l02"><li>two</li><li>three</li><li>four</li><li>five</li></ul>
 <ul class="l03"><li>two</li><li>three</li><li>four</li><li>five</li></ul>
 <ul class="l04"><li>two</li><li>three</li><li>four</li><li>five</li></ul>
 <ul class="l05"><li>two</li><li>three</li><li>four</li><li>five</li></ul>
+<ul class="l06"><li>two</li><li>three</li><li>four</li><li>five</li></ul>
 </div>
 
 <div id="d02">
