Corrected specref for list-style-image

--- a/css3/list-style-image.html
+++ b/css3/list-style-image.html
@@ -29,7 +29,7 @@ hr.clr {clear: both;}
 </style>
 </head>
 <body id="www-meyerweb-com" class="css test suite">
-<p id="specref"><a href="https://www.w3.org/TR/css-counter-styles-3/">https://www.w3.org/TR/css-counter-styles-3/</a></p>
+<p id="specref"><a href="https://www.w3.org/TR/css-lists-3/#propdef-list-style-image">https://www.w3.org/TR/css-lists-3/#propdef-list-style-image</a></p>
 
 <div class="arena">
 
