Added image() test to list-style-image

--- a/css3/list-style-image.html
+++ b/css3/list-style-image.html
@@ -19,6 +19,7 @@ hr.clr {clear: both;}
 #d01 .l03 {list-style-image: radial-gradient(closest-side, orange, orange 60%, blue 60%, blue 95%, transparent);}
 #d01 .l04 {list-style-image: linear-gradient(45deg, red, red 50%, orange 50%, orange);}
 #d01 .l05 {list-style-image: repeating-linear-gradient(-45deg, red, red 1px, yellow 1px, yellow 3px);}
+#d01 .l06 {list-style-image: image("i/box-red.gif",red);}
 
 .arena ul {float: left; width: 8em;
 	margin: 0.5em; padding: 0.5em 0.25em 0.5em 2em;
@@ -40,6 +41,7 @@ hr.clr {clear: both;}
 <ul class="l03"><li>two</li><li>three</li><li>four</li><li>five</li></ul>
 <ul class="l04"><li>two</li><li>three</li><li>four</li><li>five</li></ul>
 <ul class="l05"><li>two</li><li>three</li><li>four</li><li>five</li></ul>
+<ul class="l06"><li>two</li><li>three</li><li>four</li><li>five</li></ul>
 </div>
 <hr class="clr">
 
