Inserted styles into counter-style test

--- a/counter-style.html
+++ b/counter-style.html
@@ -2,8 +2,11 @@
 			"http://www.w3.org/TR/REC-html40/strict.dtd">
 <html>
 <head>
+<meta http-equiv="content-type" content="text/html; charset=utf-8">
 <title>@counter-style</title>
-<style type="text/css">
+
+<link rel="stylesheet" type="text/css" href="c/style-insert-tests.css">
+<style type="text/css" id="tests">
 .list01 {
 	@counter-style triangle {
 		system: cyclic;
