--- a/counter-style.html
+++ b/counter-style.html
@@ -4,7 +4,6 @@
 <head>
 <meta http-equiv="content-type" content="text/html; charset=utf-8">
 <title>@counter-style</title>
-
 <link rel="stylesheet" type="text/css" href="c/style-insert-tests.css">
 <style type="text/css" id="tests">
 @counter-style triangle {
@@ -16,7 +15,7 @@
 	/* inspired by https://twitter.com/elbym/status/823986388060274689 */
 	system: cyclic;
 	symbols: 🌕 🌖 🌗 🌘 🌑 🌒 🌓 🌔;
-	suffix: ' ';
+	suffix: '  ';
 }
 @counter-style box-corner {
 	system: fixed;
@@ -52,7 +51,8 @@
 .list04 {list-style-type: footnote;}
 .list05 {list-style-type: binary;}
 .list06 {list-style-type: trinary;}
-.list07 {list-style-type: roman;}
+.list07 {list-style-type: symbols("*" "\2020" "\2021" "\A7");}
+.list08 {list-style-type: roman;}
 </style>
 </head>
 
@@ -117,6 +117,15 @@
 </ol>
 
 <ol class="list07">
+<li>one</li>
+<li>two</li>
+<li>three</li>
+<li>four</li>
+<li>five</li>
+<li>six</li>
+</ol>
+
+<ol class="list08">
 <li>one</li>
 <li>two</li>
 <li>three</li>
